--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.14
   image_picker: ^1.1.1
+  reorderables: ^0.6.0
 
 dev_dependencies:
   flutter_test:
