--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.0.14
   image_picker: ^1.1.1
   reorderables: ^0.6.0
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
